[package]
name = "sharded_mutex"
version = "1.1.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2021"
description = "Atomic Everything"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/sharded_mutex.git"
keywords = ["locking", "concurrency"]

[dependencies]
parking_lot = ">= 0.11, <=0.13"
assoc_static = "1.0.0"
assoc_threadlocal = "0.0.1"

[features]

default = ["align_narrow"]

align_none = []
align_narrow = []
align_wide = []
align_cacheline = []


[badges]
maintenance = { status = "actively-developed" }
