[package]
name = "sharded_mutex"
version = "2.1.0"
authors = ["Christian Thäter <ct@pipapo.org>"]
edition = "2021"
description = "No per-object memory overhead locks. Pseudo atomic ops for Copy/PartialEq types."
license = "MIT OR Apache-2.0"
repository = "https://github.com/cehteh/sharded_mutex.git"
keywords = ["locking", "concurrency"]
categories = ["concurrency", "rust-patterns"]
readme = "README.md"
rust-version = "1.79.0"

[dependencies]
parking_lot = "0.12"
assoc_static = "1.0.0"
assoc_threadlocal = "0.0.1"

[features]

default = ["align_narrow", "normal_pool_size"]

align_none = []
align_narrow = []
align_wide = []
align_cacheline = []

small_pool_size = []
tiny_pool_size = []
normal_pool_size = []
big_pool_size = []
huge_pool_size = []

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "warn"
doc_markdown = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
semicolon_if_nothing_returned = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
mutants = "0.0.3"

[[bench]]
name = "mutex_bench"
harness = false